--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "react": "18.2",
-    "react-dom": "18.2",
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
+    "@xstate/react": "^3.1.1",
     "r3f-perf": "^6.6.3",
-    "three": "^0.148.0"
+    "react": "18.2",
+    "react-dom": "18.2",
+    "three": "^0.148.0",
+    "xstate": "^4.35.4"
   }
 }
